--- a/01-sample.Rmd
+++ b/01-sample.Rmd
@@ -31,7 +31,6 @@ knitr::include_graphics("docs/images/height_distribution.png")
 
 Итак, когда мы хотим сделать вывод о всех людях из генеральной совокупности -- мы проводим исследование на небольшой выборке (в зависимости от метоода исследования необходимый размер выборки может быть от 10 до 1000 чловек) и оцениваем исследуемый параметр генеральной совокупности по выборочным оценкам. 
 
-
 ## Репрезентативность выборки
 
 Важным понятием является  **репрезентативность выборки** -- способность выборки отражать исследуемый параметр генеральной совокупности. 
@@ -45,7 +44,7 @@ knitr::include_graphics("docs/images/height_distribution.png")
 
 **Способы формирования репрезентативных выборок**
 
-*  Простая случайная выборка (simple random samplle)
+*  Простая случайная выборка (simple random sample)
 *  Систематическая выборка (systematic sample)
 *  Кластерная выборка (cluster sample)
 *  Стратифицированная выборка (stratified sample)
