--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -1,4 +1,27 @@
-#  Статистический вывод
+```{r, eval=TRUE, echo = FALSE, message = FALSE}
+library(tidyverse)
+library(kableExtra)
+studens_mat <- read_csv("student-mat.csv") %>% 
+  rename_with(., ~ paste0(., "_mat"), .cols = c(absences, paid, G1, G2, G3)) -> studens_mat 
+studens_por <- read_csv("student-por.csv") %>% 
+  rename_with(., ~ paste0(., "_por"), .cols = c(absences, paid, G1, G2, G3)) -> studens_por
+studens_mat %>% 
+  full_join(studens_por, by = c("school","sex","age","address","famsize","Pstatus","Medu","Fedu",
+                             "Mjob","Fjob","reason", "guardian", "traveltime","studytime", "failures", "schoolsup", "famsup",
+                             "activities", "nursery", "higher", "internet", "romantic", "famrel", "freetime", "goout", 
+                             "Dalc", "Walc", "health")) -> students 
+
+students %>% 
+  mutate("student" = paste0("id", row_number()), .before = "school")  %>% 
+  drop_na() %>% 
+  mutate(G_mat = rowMeans(dplyr::select(., c(G1_mat, G2_mat, G3_mat))),
+         G_por = rowMeans(dplyr::select(., c(G1_por, G2_por, G3_por)))) %>% 
+  mutate(ansences_mat_groups = ifelse(absences_mat <=5, "less", ifelse(absences_mat <=15, "middle", "more"))) %>% 
+  mutate(ansences_por_groups = ifelse(absences_por <=5, "less", ifelse(absences_por <=15, "middle", "more"))) -> students-> students
+```
+
+
+#  Статистический вывод {#inference} 
 
 Мы закончили со введением в статистику, обсудили случайные величины и вероятность и научились считать описательные статистики: меры центральной тенденции, куда "тяготеет" центр масс наших данных (среднее, медиана, мода), и меры вариативности, показывающие, как сильно изменяются наши данные от наблюдения к наблюдению (дисперсия, стандартное отклонение, межквартильный размах). Описательные статистики были нужны нам, чтобы описать наши данные, заменить большую непонятную табличку сырых данных на конкретные значения и сделать какие-то или предположения о том, есть ли между ними различия, если мы говорим о выборке из генеральной совокупности, либо какие-то выводы, если наши данные представляют всю генеральную совокупность. 
 
@@ -26,7 +49,7 @@ knitr::include_graphics("docs/images/sample-inference.png")
 
 > Исследование семейных пар в России (объем выборки составил 100 семейных пар), в которых есть дети подросткового возраста, показало, что те пары, где отец и мать работают полный рабочий день, они проводят со своими детьми в среднем 15 часов свободного времени в неделю. Согласно данным проведенного исследования, стандартное отклонение оказалось равным 4,5 (ч). Можно ли на уровне доверия 0,99 утверждать, что в семьях, в которых работают и отец, и мать, в среднем в течение недели родители проводят с детьми подросткового возраста больше 14 часов?
 
-<div class="advanced">
+<div>
 <details>
 <summary>*Решение*</summary>
 
@@ -62,10 +85,21 @@ knitr::include_graphics("docs/images/garbage.jpg")
 
 Идея статистического тестирования гипотез (null hypothesis statistical testing) базируется на том, что мы выдвигаем какое-то предположение относительно генеральной совокупности и ее параметров: среднего (математического ожидания), стандартного отклонения или каких-то других параметров, и статистически проверяем это предположение. Если мы будем выбирать много выборок и считать их средние, какова веротность получить такие или более отличающиеся от популяционных выборочные оценки чисто случайным образом, если на самом деле это не так?
 
-> Допустим, мы исследовали семьи в крупных и небольших городах и на нашей выборки посчитали, что в крупных городах родители проводят со своими детьми в среднем не 14 часов, а в небольших городах -- 15 часов в неделю. Отличается статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах?
+Вернемся к нашему примеру про время проведенное с детьми, вспомним датасет о португальских студентах
+
+
+```{r eval=TRUE, echo = FALSE, message = FALSE}
+kable(students[1:10,]) %>% scroll_box(width = "100%") 
+```
+
+Зададим три вопроса:
+
+> Допустим, мы исследовали семьи с подростками в крупных (GP school) и небольших городах (MS school) и на нашей выборке посчитали, что в крупных городах родители проводят со своими детьми в среднем 14 часов, а в небольших городах -- 15 часов в неделю (из данных задания на доверительный интвервал). 
+1. Отличается ли статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах? 2. Отличается ли статистически значимо частота употребления алкоголя в семьях с менее поддерживающими отношениями и более поддерживающими? 
+3. Отличается ли статистически значимо средний балл по математике у тех, кто чаще или реже пропускает занятия?
 
 Мы увидели вопрос о статистической значимости. **Статистическая значимость** -- вероятностный уровень, через который должны перешагнуть наши найденные значения на *выборке* для того, чтобы мы могли сделать вывод о *генеральной совокупности*.
-Почему нельзя просто сказать, что 14 и 15 -- очевидно разные числа, значит, и значения различаются? Потому что мы измерили эти значения только на одной выборке, а выводы, которые мы делаем, базируются на вероятностях получить такие или иные значения или частотах их возникновения (фреквентистская статистика!). И мы знаем, что если мы будем повторять исследование много-много раз, то средние в них не будут одинаковы, согласно центральной предельной теореме [#ctt], они будут распределны нормально, где средним будет -- среднее генеральной совокупности (математической ожидание).
+Почему нельзя просто сказать, что 14 и 15 -- очевидно разные числа, значит, и значения различаются? Потому что мы измерили эти значения только на одной выборке, а выводы, которые мы делаем, базируются на вероятностях получить такие или иные значения или частотах их возникновения (фреквентистская статистика!). И мы знаем, что если мы будем повторять исследование много-много раз, то средние в них не будут одинаковы, согласно [центральной предельной теореме](#ctt), они будут распределны нормально, где средним будет -- среднее генеральной совокупности (математической ожидание).
 
 Для того, чтобы ответить на вопрос, есть ли статистически значимые различия, нужно проверить гипотезу о различиях по алгоритму **NHST (null hypothesis statistical testing)**
 
@@ -82,11 +116,11 @@ knitr::include_graphics("docs/images/garbage.jpg")
 * Проведен **статистический тест** выбранным статистическим методом, рассчитаны p-value, ключевая статистика (t-значение, F-значение, R, R2 и т.д) и размер эффекта (Cohen’s d, eta squared и тд).
 * Полученные в ходе статистического теста **статистики проинтерпретированы**
 * На основании полученных статистик **сделаны выводы относительно эмпирической гипотезы**.
-* Данные в**изуализированы** иллюстрирующим статистический тест графиком (диаграмма рассеяния с линией тренда, боксплот, вайолин плот и другие).
+* Данные **визуализированы** иллюстрирующим статистический тест графиком (диаграмма рассеяния с линией тренда, боксплот, вайолин плот и другие).
 
 Разберем каждый шаг.
 
-## Эмпирические гипотезы
+## Эмпирические гипотезы и переменные
 
 **Эмпирические гипотезы** – те, которые мы можем проверить опытным путем. Чтобы правильно их сформулировать, нам надо также определиться с типом эмпирического исследования, которое возможно для проверки наших теоретических гипотез. В психологических исследованиях это чаще всего **эксперимент, квази-эксперимент, корреляционное исследование (и лонгитюдное исследование** как его подвид). Иногдd бывает **case study**, исследование одного конкретного случая, чаще в когнитивной психологии и нейронауках.
 
@@ -98,7 +132,10 @@ knitr::include_graphics("docs/images/hypothesis.png")
 ```
 </p>
 
+### Эмпирические методы
+
 Разберем несколько примеров
+
 Ситуация 1
 
 > Предположим, что группа ученых хочет исследовать влияние курения на возникновение ментальных расстройств Какие исследования можно провести для исследования этого вопроса?
@@ -109,25 +146,128 @@ knitr::include_graphics("docs/images/hypothesis.png")
 
 И вернемся к нашей ситуации
 
-> Исследование семейных пар в России (объем выборки составил 100 семейных пар), в которых есть дети подросткового возраста, показало, что те пары, где отец и мать работают полный рабочий день, они проводят со своими детьми в среднем 15 часов свободного времени в неделю. Согласно данным проведенного исследования, стандартное отклонение оказалось равным 4,5 (ч). Можно ли на уровне доверия 0,99 утверждать, что в семьях, в которых работают и отец, и мать, в среднем в течение недели родители проводят с детьми подросткового возраста больше 14 часов?
+> Допустим, мы исследовали семьи с подростками в крупных (GP school) и небольших городах (MS school) и на нашей выборке посчитали, что в крупных городах родители проводят со своими детьми в среднем 14 часов, а в небольших городах -- 15 часов в неделю (из данных задания на доверительный интвервал). 
+1. Отличается ли статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах? 2. Отличается ли статистически значимо частота употребления алкоголя в семьях с менее поддерживающими отношениями и более поддерживающими? 
+3. Отличается ли статистически значимо средний балл по математике у тех, кто чаще или реже пропускает занятия?
 
-Метод, который здесь используется -- это квази-эксперимент или корреляционное исследование (так как мы не можем взять одинаковые семьи и оодним сказать "проводите по 15 часов с детьми", а другим -- "проводите по 14 часов с детьми", у нас уже есть эти группы, мы не проводим манипуляции сами).
+Метод, который здесь используется -- это квази-эксперимент или корреляционное исследование (так как мы не можем взять одинаковые семьи и одним сказать "проводите по 15 часов с детьми", а другим -- "проводите по 14 часов с детьми", у нас уже есть эти группы, мы не проводим манипуляции сами).
 
-Эмпирическая гипотеза может звучать так: `семьи, живущие в крупных  городах, проводят в среднем меньше времени с детьми, чем семьи, живующие в маленьких городах`
+
+
+Эмпирическая гипотеза 1 может звучать так: `семьи, живущие в крупных  городах, проводят в среднем меньше времени с детьми, чем семьи, живующие в маленьких городах`
+
+Эмпирическая гипотеза 2: `Студенты, кто оценивает отношения с родителями как менее поддерживающие (переменная famrel, менее поддерживающие в значениях 1-2), чаще употребляют алкоголь (переменная Walc, употребление в выходные дни, значения 4-5)`
+
+Эмпирическая гипотеза 3 `Студенты, у кого было много пропусков (absences_mat или absences_por, высокие значения), будут иметь более низкий средний балл (среднее из G1_mat, G2_mat, G3_mat или G1_por, G2_por, G3_por -- низкие значения)`
+
+Давайте сначала подумаем, что это за гипотезы, какие зависимые и независимые переменные, наличие или отсутствие какой связи между зависимой и независимыми переменными нам хочется проверить?
+
+### Зависимые и независимые переменные
+
+**Независимые переменные** – это все, чем мы манипулируем по ходу проведения исследования, какие различия создаем с целью получить разный результат. **Зависимая** – целевая переменная, различия в которой как раз хотим получить путем манипуляции независимыми переменными, то, что мы измереяем. При описании исследования всегда важно записывать ЗП и НП, наряду с эмпирической (если метод это эксперимент, то экспериментальной) гипотезой. Эмпирическая гипотеза и переменные -- сердце нашего исследования, самое основное из языка, на котором описывается исследование, без понимания, что мы хгтим прооверить, чула не получится.
+
+При описании ЗП и НП важно указать, к какой шкале они относятся? Это важно понимать, чтобы потом выбрать, как анализировать данные.
+
+### Уровни НП в категориальных переменных
+
+Об уровнях в НП говорят в категориальных -- порядковых или номинативных -- переменных. Например, условия "часто" и "редко", условия "обеспеченная семья" или "не обеспеченная". В примерах выше для гипотезы `семьи, живущие в крупных  городах, проводят в среднем меньше времени с детьми, чем семьи, живующие в маленьких городах` мы собираемся сравнить две группы, и здесь можно говорить об уровнях НП `город` -- `крупный город` и `небольшой город`. 
+
+
+Для гипотезы 1
+
+$ Школа \sim {среднее время с детьми / неделю}$
+
+ЗП -- время с детьми, количественная непрерывная -- шкала отношений
+НП -- школа в городе (крупном / небольшом), категориальная
+
+Для гипотезы 2
+
+$famrel \sim Walc$
+
+ЗП -- ?
+НП -- ?
+
+Для гипотезы 3
+
+$ \sim $
+
+ЗП -- ?
+НП -- ?
+
+В зависимости от того, какие выводы мы хотим сделать, нам можем потребоваться разное количество уровней в данных. Сравните гипотезы: `Студенты, кто оценивает отношения с родителями как менее поддерживающие (переменная famrel, менее поддерживающие в значениях 1-2), чаще употребляют алкоголь (переменная Walc, употребление в выходные дни, значения 4-5)` и `Чем ниже студенты оценивают отношения с родителями (переменная famrel), тем чаще они употребляют алкоголь в выходные дни (переменная Walc)`. Чем они отличаются?
+
+<div>
+<details>
+<summary>*Отличия*</summary>
+
+</details>
+</div>
+
+
+От того, какой вывод мы хотим сделать, хотим ли обнаружить характер связи между уровнями категориальной переменной (чаще всего линейной, но может быть и какой-то еще, экспоненциальной например) или нам достаточноо сравнить двве группы между собой, будет зависеть, какой статистический метод будем выбирать. Вернемся к этому чуть позже.
+
+
+### Связь между ЗП и НП
+
+Выводы о какой связи мы можем установить?
+
+Два основных вида связи между переменными:
+
+* **Ассоциативная или корреляционная**
+* **Причинно-следственная**
+
+Три необходимых условия для установления **причинно-следственной связи**:
+
+1. Изменение НП произошло раньше, чем мы пронаблюдали изменение в ЗП
+2. Изменения НП имеют ассоциативную связь с изменениямм в ЗП 
+3. Нет никаких альтернативных объяснений изменений в ЗП, помимо изменений НП
+
+
+Сейчас у нас есть только опросные данные, в которых студенты отвечали на вопросы одновременно. Получается, что в таком дизайне исследования мы не проходим необходимые условия для установления причинно-следственной связи, следовательно, сделать вывод о причинно-следственной связи не можем. Причинно-следственную связь мы можем установить только в ходе **эксперимента** или **квази-эксперимента** (отличается от эксперимента тем, что испытуемые не распределяются в группы рандомно, а используются уже существующие в популяции группы, например, разные страны). Во всех остальных видах исследований, особенно, когда исследуется связь переменных в одном самоотчете или опроснике, мы можем говорить только об ассоциативной или корреляционной связи.
+
+Часто бывает, что Вполне вероятно, что плохие отношения в семье приводят у алкоголизму у детей. Но у нас в нашей выборке есть только такие данные -- из опросника, и из тех данных того исследования, которые у нас есть, мы можем судить только о наличии или отсутствии корреляции.
+
+При формулировании выводов эти выводы могут отличаться так, сравните:
+- Вывод 1: "Менее поддерживающие отношения в семье вызывают алкоголизм".
+- Вывод 2: "Менее поддерживающие отношения в семье ассоциированы с высоким риском алкоголизма".
+
+Несмотря на то, что мы говорим о корреляции, тут тоже есть варианты. Сравните варианты формулировок для гипотезы 1: `чем меньше возраст студентов (age), чем ниже будут ответы в переменной Walc` и `студенты возраста 15, 16, 17 лет будут выбирать меньшие варианты ответа в переменной Walc` или `студенты возраста 15 лет будут выбирать меньшие варианты ответа в переменной Walc`. Чем они отличаются? 
+
+<div>
+<details>
+<summary>*Отличия*</summary>
+
+</details>
+</div>
 
 Для того, чтобы проверить, есть ли статистически значимые различия между этими группами, нужно сформулировать нулевую и альтенативную гипотезы.
 
-## Нулевая и альтернативные гипотезы
+
+## Нулевая и альтернативные статистические гипотезы
+
+Нулевая и альтернативные гипотезы -- вспомогательные гипотезы, чисто статистические, для того, чтобы проверить нашу эмпирическую гипотезу.
 
 
+**Нулевая гипотеза** $H_0$ -- это всегда гипотеза об отсутствии различий в генеральной совокупности.
+**Альтернативная гипотеза** $H_1$ -- гипотеза, противоположная к $H_0$, то есть гипотеза о наличии различий в генеральной совокупности. $P(H_0) + P(H_1) = 1$
 
+Какие $H_0$ и $H_1$ для гипотез? 
+
+1. Отличается ли статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах? 2. Отличается ли статистически значимо частота употребления алкоголя в семьях с менее поддерживающими отношениями и более поддерживающими? 
+3. Отличается ли статистически значимо средний балл по математике у тех, кто чаще или реже пропускает занятия?
+
+### Направленные и ненаправленные гипотезы
+
+На этом этапе нам важно, как сформулирована эмпирическая гипотеза, в сторону увеличения / уменьшения значения ЗП в одноой из групп или в общем виде, что значения ЗП в группах ненаправленно различаются?
 
 ## Ошибки первого и второго рода
+
+После того, как мы разобрались с гипотезами, эмпирической и статистическими, нам нужно задать критерии, на основании которых будем принимать решение о выводах из нашей выборке на генеральную совокупность.
 
 Уровень значимости $\alpha$  и статистическая мощность $power = 1-\beta$ – это два из самых важных параметров в тестировании гипотез. Эти понятия задают вероятностные рамки, в которых мы будем проводить тест. Первая рамка – это вероятность получить значимый результат (значимые различия между группами или связь между переменными), если его на самом нет в генеральной совокупности – ложноположительный результат, false positive, она же ошибка первого рода $\alpha$. 
 
 <p align="center"> 
-```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
 knitr::include_graphics("docs/images/errors_types.jpg")
 ```
 </p>
@@ -140,24 +280,17 @@ knitr::include_graphics("docs/images/errors.jpg")
 ```
 </p>
 
-## Выбор уровня значимости и статистическая мощности
+## Уровень значимости и статистическая мощность
 
-Уровень значимости $\alpha$ мы задаем сами (!). А вероятность, при которой в генеральной совокупности на самом деле есть разница между группами или связь, но мы не получили ее на наших данных – это β - статистическая мощность теста.
+**Уровень значимости** $\alpha$, она же ошибка первого рода -- сделать ложноположительный вывод, то есть когда эффекта нет в генеральной совокупности, но мы делаем вывод, что он есть --  мы задаем сами (!). В психологии есть конвенциональная договоренность считать уровень значимости $\alpha = 0.05$. То есть, мы просто договорились считать 5% вероятность сделать ложноположительный вывод -- компромиссным вариантом между тем, чтобы мочь делать вообще какие-то выводы о генеральной совокупности, и тем, что 5%  наших исследований будут содержать неверные выводы (на самом деле, гораздо больше, об этом поговорим позже).
 
-Уровень значимости  
-α
-  – это уровень вероятности, при достижении которого мы будем считать, что нулевая гипотеза  
-H
-0
-  подтвердилась, и значимых различий или связи между переменными нет. Это просто значение из пространства вероятностей получить значимый результат (различия или связь) случайным образом, при условии, что его на самом деле нет в генеральноой совокупности. Психологи просто выбрали значение  
-α
-=
-0.05
-  и решили, что 5% ложноположительных результатов в психологии – подходящий вариант (сейчас идет большая дискуссия, так ли это). А если мы возьмем, например, физику элементарных частиц, то здесь речь об открытии новой частиц идет только на уровне  
-α
-=
-0.000001
- !
+Но это договоренность, притом спорная!
+В физике элементарных частиц  $\alpha = 0.000003$!
+
+Статья "Justify your alpha" в Nature Human Behaviour https://www.nature.com/articles/s41562-018-0311-x
+
+
+А вероятность, при которой в генеральной совокупности на самом деле есть разница между группами или связь, но мы не получили ее на наших данных – это $\beta$ - статистическая мощность теста.
 
 Уровень статистической мощности (statistical power) – это положительная метрика, уровень вероятности, при которой мы гарантируем, что если различия между группами или связь между переменными есть в генеральной совокупности, то мы сможем найти ее на наших данных при помощи нашего статистического теста. Если смотреть на таблицу ошибок первого и второго, статистическая мощность это  
 1
@@ -177,6 +310,11 @@ r
 
 
 
+## Выбор статистического критерия
+
+## Размер выборки
+
+## Расчет статического критерия и проверка значимости
 
 $\mu$ = 18, M = 15, n = 100, sd = 4.5
 
@@ -191,4 +329,5 @@ $\mu$ = 18, M = 15, n = 100, sd = 4.5
 https://gallery.shinyapps.io/dist_calc/ 
 
 <!-- $z = \frac{x - \bar x}{s}$ -->
+
 
