--- a/06-ct.Rmd
+++ b/06-ct.Rmd
@@ -74,7 +74,7 @@ knitr::include_graphics("docs/images/standatr_normrasp.png")
 
 $z = \frac{x - \bar x}{s}$
 
-# Доверительный интервал
+## Доверительный интервал
 
 Мы рассмотрели описательные статистики: меры центральной тенденции и меры вариативности переменной. Этоо были тоочечные оценки: мы используем эти величины, чтобы описать наши данные, перейти от таблички с одному или нескольким числам. Помимо точечных оценок используются также интервальные -- если мы хотим получить не конкретное число, а интервал, в котором зато точно будет содержаться интересующий нас параметр.
 
