--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -253,14 +253,15 @@ $ \sim $
 
 Какие $H_0$ и $H_1$ для гипотез? 
 
-1. Отличается ли статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах? 2. Отличается ли статистически значимо частота употребления алкоголя в семьях с менее поддерживающими отношениями и более поддерживающими? 
-3. Отличается ли статистически значимо средний балл по математике у тех, кто чаще или реже пропускает занятия?
+`1. Отличается ли статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах?`
+`2. Отличается ли статистически значимо частота употребления алкоголя в семьях с менее поддерживающими отношениями и более поддерживающими? `
+`3. Отличается ли статистически значимо средний балл по математике у тех, кто чаще или реже пропускает занятия?`
 
 ### Направленные и ненаправленные гипотезы
 
 На этом этапе нам важно, как сформулирована эмпирическая гипотеза, в сторону увеличения / уменьшения значения ЗП в одноой из групп или в общем виде, что значения ЗП в группах ненаправленно различаются?
 
-## Ошибки первого и второго рода
+## Уровень значимости и статистическая мощность
 
 После того, как мы разобрались с гипотезами, эмпирической и статистическими, нам нужно задать критерии, на основании которых будем принимать решение о выводах из нашей выборке на генеральную совокупность.
 
@@ -275,12 +276,10 @@ knitr::include_graphics("docs/images/errors_types.jpg")
 Вторая рамка – вероятность получить незначимый результат, если его на самом деле он есть в генеральной совокупности – ложноотрицательный результат, false negative, она же ошибка второго рода $\beta$.
 
 <p align="center"> 
-```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
 knitr::include_graphics("docs/images/errors.jpg")
 ```
 </p>
-
-## Уровень значимости и статистическая мощность
 
 **Уровень значимости** $\alpha$, она же ошибка первого рода -- сделать ложноположительный вывод, то есть когда эффекта нет в генеральной совокупности, но мы делаем вывод, что он есть --  мы задаем сами (!). В психологии есть конвенциональная договоренность считать уровень значимости $\alpha = 0.05$. То есть, мы просто договорились считать 5% вероятность сделать ложноположительный вывод -- компромиссным вариантом между тем, чтобы мочь делать вообще какие-то выводы о генеральной совокупности, и тем, что 5%  наших исследований будут содержать неверные выводы (на самом деле, гораздо больше, об этом поговорим позже).
 
@@ -290,29 +289,105 @@ knitr::include_graphics("docs/images/errors.jpg")
 Статья "Justify your alpha" в Nature Human Behaviour https://www.nature.com/articles/s41562-018-0311-x
 
 
-А вероятность, при которой в генеральной совокупности на самом деле есть разница между группами или связь, но мы не получили ее на наших данных – это $\beta$ - статистическая мощность теста.
+Вероятность, при которой в генеральной совокупности на самом деле есть разница между группами или связь, но мы не смогли зарегистрировать ее на наших данных $\beta$, она же ошибка второго рода – это ошибка второго рода, вероятность сделать ложноотрицательный вывод. И если ошибка первого рода $\alpha$ эксплицитно фигурирует в тестировании гипотезы -- это то значение, с которым мы сравниваем наше получившееся p-value, то $\beta$ не участвует в этом тестировании. То есть, мы можем легко получить ложнооотрицательный вывод, отсутствие результатов, хотя на самом деле они есть. Поэтому нам Нужно ввести $\beta$ в прооверку гипотезы и минимизировать такую вероятность. Для этого введено понятие статистической мощности теста $power = 1 - \beta$.
 
-Уровень статистической мощности (statistical power) – это положительная метрика, уровень вероятности, при которой мы гарантируем, что если различия между группами или связь между переменными есть в генеральной совокупности, то мы сможем найти ее на наших данных при помощи нашего статистического теста. Если смотреть на таблицу ошибок первого и второго, статистическая мощность это  
-1
-−
-β
- , то есть обратная величина к вероятности ошибки второго рода, не найти значимый эффект, если он есть  
-β
-  (статистическая мощность и вероятность ошибки второго рода – противоположные понятия, в суммме эти вероятности дают 1). В психологии конвенционально сложилось, что чаще всего статистическую мощность принимают на уровне  
-p
-o
-w
-e
-r
-=
-0.8
-
-
+**Уровень статистической мощности (statistical power)** – это положительная метрика, уровень вероятности, при которой мы гарантируем, что если различия между группами или связь между переменными есть в генеральной совокупности, то мы сможем найти ее на наших данных при помощи нашего статистического теста. Если смотреть на таблицу ошибок первого и второго рода, статистическая мощность -- обратная величина к вероятности ошибки второго рода, не найти значимый эффект, если он есть. В психологии конвенционально сложилось, что чаще всего статистическую мощность принимают на уровне  $power = 1 - \beta$. Снова договоренность!
 
 
 ## Выбор статистического критерия
 
+Как понять, какой тест выбрать? Это, наверное, один из самых сложных вопросов в статистике.
+
+**Вопросы, которые влияют на принятие решения относительно статистического теста:**
+
+1. Зависимая переменная количественная (интервальная шкала или шкала отношений) или категориальная (номинативная или порядковая шкала)?
+2. Если ЗП количественная -- она описывается параметрическим (чаще всего нормальным) распределением? *(определяется чаще "на глаз" по графику плотности вероятности или QQ-графиками, тесты на нормальность почти всегда будут давать негативный результат из-за чувствительности и поэтому в современном анализе данных используются мало)*
+3. Сколько независимых переменных?
+4. НП количественные (интервальная и шкала отношений) или категориальные (номинативная и порядковая)?
+5. Если НП категориальные и мы сравниваем группы -- данные в группах зависимы или нет? Если нет, как сильно отличаются данные в группах, можем ли сказать, что дисперсия ЗП примерно одинакова в группах или нет? (*равенство дисперсий называется Homogeneity of Variance, проверяется с помощью Levene's test*)
+
+Есть большое количество схем, но обычно они сильно перегруженны и сложны в использовании, больше путают, чем помогают. 
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/tests.png")
+```
+</p>
+
 ## Размер выборки
+
+**Расчет размера выборки** -- важнейший этап, потому что именно он отвечает за нивелирование ошибки второго рода, сделать ложноотрицательный вывод. Вполне может оказаться так, что из-за маленькой выборки мы просто не смогли зафиксировать различия, которые на самом деле есть в генеральной совокупности! 
+
+Этот пункт раньше часто пропускался: казалось, что размер выборки не требует определенного расчета, и достаточно опираться на предыдущие исследование. Оказалось, что это не так, подробнее о последствиях такого подхода поговорим далее.
+
+Чтобы посчитать необходимую выборку, нужно знать примерный размер эффекта, который мы можем обнаружить, уровень значимости $\alpha$, и статистическую мощность.
+
+**Размер эффекта** -- это величина наблюдаемых различий. За степень различий отвечает не полученная статистика после примененного статистического критерия (например, t-значение, F-значение), и не p-значение, а отдельная метрика. Эта метрика расчитывается по формулам индивидуально для каждого статистического теста. Например, для t-test размер эффекта -- это $Cohen's d$ или его нормализованная версия $Hedges` g$. Исключение составляет только коэффициент корреляции $r$ -- он как раз будет являться и статистикой, и величиной эффекта. Для линейной регрессии с одинм предиктором размером эффекта может также являться $R^2$, а для множественной, когда много предикторов, лучше уже использовать метрику $Cohen’s f^2$ В психологических исследованиях размер эффекта редко бывает большим. И чем меньше ожидаемый размер эффекта, тем больше наблюдений нам надо собрать для возможности сделать точный вывод о наличи или отсутствии различий в генеральной совокупности.
+
+Есть хорошая визуализация размера эффекта дла t-test *Cohen's d*  https://rpsychologist.com/d3/cohend/
+
+Размер эффекта обычно используется в двух случаях:
+
+1. Для расчета размера выборки при планировании исследования *(текущий момент)* --  в этом с лучае используется размер эффекта из аналогичных уже проведенных исследований для того, чтобы примерно оценить возможности поймать популяционный эффект на нашей выборке и набрать нужное количество.
+2. При репортинге результатов уже проведенного собственного статистического теста. Здесь он указывается вместе со статистиками, об этом в разделе [Статистики вывода: расчет разных статистических методов для проверки гипотез]
+
+Если в статьях, на которые вы опираетесь при планировании исследования, не указан размер эффекта, его можно посчитать самостоятельно.
+
+Разделение размеров эффекта https://imaging.mrc-cbu.cam.ac.uk/statswiki/FAQ/effectSize 
+
+Стат критерий | Метрика размера эффекта | Маленький эффект | Средний эффект | Сильный эффект 
+------------- | ----------------------- | ---------------- | -------------- | -------------
+t-test | $Cohen's d, Hedges' g$ | 0.2 | 0.5 | 0.8
+ANOVA | $\eta^2, \omega^2$ | 0.01 | 0.06 | 0.14
+
+"Calculating and reporting effect sizes to facilitate cumulative science: a practical primer for t-tests and ANOVAs" https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00863/full 
+
+**Размер эффекта, уровень значимости $\alpha$, статистическая мощность и размер выборки -- связанные параметры. Зная 3 их них, всегда можно вычислить четвертый!** и размер выборки -- связанные параметры. Зная 3 их них, всегда можно вычислить четвертый!
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
+knitr::include_graphics("docs/images/power_samplesize.jpg")
+```
+</p>
+
+Куда будут попадать выборочные средние при справедливости альтернативной гипотезы?
+https://rpsychologist.com/d3/nhst/
+
+Underpowered studies -- огромнная проблема многих наук. "Power failure: why small sample size undermines the reliability of neuroscience" https://www.nature.com/articles/nrn3475
+
+Зная статистическую мощность, уровень значимости и размер эффекта -- размер выборки можно рассчитать в Gpower https://www.psychologie.hhu.de/arbeitsgruppen/allgemeine-psychologie-und-arbeitspsychologie/gpower или в R, например, с помощью пакета `pwr` https://cran.r-project.org/web/packages/pwr/pwr.pdf. Рассчитаем вторым способом.
+
+Допустим, мы решили проверять гипотезу о том, что студенты, чьи родители получили магистерское образование, учатся лучше, чем те, чьи родители закончили колледж. Выбрали уровень статистической значимости $\alpha = 0.05$, с которым будем сравнивать p-values, которые получим. Выбрали уровень статистической мощности $power = 0.8$ (то есть ошибка второго рода $\beta = 0.2$). Выбрали, что будем проверять эти гипотезу с помощью t-test. Из предыдущего похожего исследования узнали, что размер эффекта в аналогичном исследовании был равен Cohen's d = 0.37. И теперь можем оценить, сколько данных нам нужно набрать, чтобы если различие между такими студентами было в генеральной совокупности, мы смогли обнаружить его на наших данных. Эти 4 величины связаны между собой математически, поэтому зная 3 любых, мы можем вычислить четвертую. https://rpsychologist.com/d3/nhst/ 
+
+```{r}
+library(pwr)
+pwr::pwr.t.test(d=0.37,power=0.8,sig.level=0.05,type="two.sample", alternative="greater")
+```
+Анлогично, расчет размера выборки для проверки гипотезы о том, что образование родителей и прохождение подготовительного курса как-то связано с успеваемостью студентов с помощью построения линейной модели.
+```{r, message=FALSE}
+library(WebPower)
+WebPower::wp.regression(n = NULL, p1 = 2, f2 = 0.24, alpha = 0.05, power = 0.8)
+```
+
+У пакета есть веб-приложение https://webpower.psychstat.org/models/reg01/
+
+Важный момент про статистическую мощность: именно она как раз показывает, с какой частотой будут выпадать $p$-values < $\alpha$ в случае верности альтернативной гипотезы (что различия или связь есть!)
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/pvalue_dist_2.png")
+```
+</p>
+
+Для того, чтобы детально поразбираться в нюансах размера эффекта и выборки, можно пройти курс Лакенса https://www.coursera.org/learn/statistical-inferences (кажется, теперь только с vpn)
+
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
+knitr::include_graphics("docs/images/meme_effsize.png")
+```
+Мем из Когнитивного патимейкера
+</p>
 
 ## Расчет статического критерия и проверка значимости
 
@@ -320,13 +395,26 @@ $\mu$ = 18, M = 15, n = 100, sd = 4.5
 
 Построим распределение выборочных средних. Мы предположили, что популяционное среднее равно 18, а чему равно стандартное отклонение этого распределения?
 
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
+knitr::include_graphics("docs/images/means_dist.png")
+```
+</p>
+
 Сначала считаем стандартную ошибку среднего $\mathrm{se} = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
 
 Как понять, насколько далеко наше выборочное среднее отклонилось от популяционного в 18? 
 
 Надо посчитать z-оценку!
 
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
+knitr::include_graphics("docs/images/z_dist.png")
+```
+
 https://gallery.shinyapps.io/dist_calc/ 
+
+Статья "A Dirty Dozen: Twelve P-Value Misconceptions" https://sixsigmadsi.com/wp-content/uploads/2020/10/A-Dirty-Dozen-Twelve-P-Value-Misconceptions.pdf
 
 <!-- $z = \frac{x - \bar x}{s}$ -->
 
