--- a/06-ct.Rmd
+++ b/06-ct.Rmd
@@ -26,7 +26,7 @@ sd(means_from_samples)
 Визуализация принципов работы 
 https://gallery.shinyapps.io/CLT_mean/
 
-## Стандартная ошибка среднего
+## Стандартная ошибка среднего (#standart_error)
 
 $se = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
 
