--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -103,20 +103,20 @@ kable(students[1:10,]) %>% scroll_box(width = "100%")
 
 Для того, чтобы ответить на вопрос, есть ли статистически значимые различия, нужно проверить гипотезу о различиях по алгоритму **NHST (null hypothesis statistical testing)**
 
-## NHST: чек-лист проверки гипотезы
+## NHST: алгоритм проверки гипотезы и анализа данных
 
-* Сформулирована **эмпирическая гипотеза** (гипотеза на языке возможностей того исследования, которое будет проводиться), выделены **зависимая и независимая переменная** и характер исследуемой связи между ними.
-* Есть понимание, как будут выглядеть собранные данные.
-* Сформулированы **нулевая** $H_0$ и **альтернативная** $H_1$ **гипотезы** 
-* Выбраны **уровень значимости** $\alpha$ (чаще всего α=0.05) и **статистическая мощность** $power = 1-\beta$ (чаще всего power=0.8).
-* Выбран **статистический метод** проверки гипотезы (например, t-test, Манна-Уитни тест, ANOVA, тест Краскела-Уоллиса, корреляционный тест, линейная регрессия и т.д.).
-* На основании α, power и размера эффекта предыдущих исследований для выбранного статистического метода рассчитан **размер необходимой выборки**.
-* Выбрана среда анализа данных, данные предобработаны.
-* Для выбранных переменных по отдельности посчитаны **описательные статистики**, переменные визуализированы с помощью гистограммы (histogram) или столбчатой диаграммы (barplot) или графика плотности вероятности (density plot).
-* Проведен **статистический тест** выбранным статистическим методом, рассчитаны p-value, ключевая статистика (t-значение, F-значение, R, R2 и т.д) и размер эффекта (Cohen’s d, eta squared и тд).
-* Полученные в ходе статистического теста **статистики проинтерпретированы**
-* На основании полученных статистик **сделаны выводы относительно эмпирической гипотезы**.
-* Данные **визуализированы** иллюстрирующим статистический тест графиком (диаграмма рассеяния с линией тренда, боксплот, вайолин плот и другие).
+1. Формулируем **эмпирическую гипотезу** (гипотеза на языке возможностей того исследования, которое будет проводиться), выделить **зависимую и независимую переменные** и характер исследуемой связи между ними. Понимаем, как будут выглядеть собранные данные.
+2. Формулируем **нулевую** $H_0$  (об отсутствии и различий или связи) и **альтернативную** $H_1$ (о наличии различий или связи) **гипотезы**
+3. Выбираем условия, при котором будем рассчитывать статистический критерий -- **уровень значимости** $\alpha$ (вероятность ложноположительного вывода, чаще всего α=0.05) и **статистическую мощность** $power = 1-\beta$ (вероятность обнаружить эффект, если он есть, чаще всего power=0.8).
+4. Выбираем **статистический критерий** проверки гипотезы (например, t-test, Манна-Уитни тест, ANOVA, тест Краскела-Уоллиса, корреляционный тест, линейная регрессия и т.д.).
+5. На основании α, power и размера эффекта предыдущих исследований для выбранного статистического критерия рассчитываем **размер необходимой выборки**.
+-- *собираем данные* --
+6. Выбираем среду анализа данных, предобработываем данные.
+7. Для выбранных переменных по отдельности считаем **описательные статистики**, переменные визуализируем с помощью гистограммы (histogram) или столбчатой диаграммы (barplot) или графика плотности вероятности (density plot).
+9. Проводим расчет **статистического критерия**: рассчитываем ключевую статистику (t-значение, F-значение, R т.д) и p-value, считаем размер эффекта (Cohen’s d, eta squared и тд).
+10. **Делаем выводы и нтерпретируем статистики**, полученные в ходе статистического теста: сравниваем полученное p-value с выбранным уровнем $\alpha$, если p-value < $\alpha$ -- считаем, что у нас достаточно доказательств, чтобы отвергнуть нулевую гипотезу $H_0$, и принимаем решение о верности альтернативной гипотезы $H_1$.
+11. Делаем **вывод относительно эмпирической гипотезы**.
+12. **Визуализируем данные** иллюстрирующим результаты графиком (диаграмма рассеяния с линией тренда, боксплот, вайолин плот и другие).
 
 Разберем каждый шаг.
 
@@ -245,10 +245,11 @@ $ \sim $
 
 ## Нулевая и альтернативные статистические гипотезы
 
+Для того, чтобы провести статистический тест, нужно определить еще **статистическую гипотезу** – тестируемое утверждение об отсутствии различий между группами (если гипотеза подразумевает сравнение групп) или об отсутствии связи между переменнами (если гипотеза про связь количественных непрерывных переменных). 
+
 Нулевая и альтернативные гипотезы -- вспомогательные гипотезы, чисто статистические, для того, чтобы проверить нашу эмпирическую гипотезу.
 
-
-**Нулевая гипотеза** $H_0$ -- это всегда гипотеза об отсутствии различий в генеральной совокупности.
+**Нулевая (основная) гипотеза** $H_0$ -- это всегда гипотеза об отсутствии различий в генеральной совокупности. мы пытаемся опровергнуть в статистическом тестировании (да, именно опровергнуть, а не подтвердить – выводы, которые мы можем сделать отноосительно нулевой гипотезы – только отвергнуть или не отвергнуть, не можем подтвердить ее и принять).
 **Альтернативная гипотеза** $H_1$ -- гипотеза, противоположная к $H_0$, то есть гипотеза о наличии различий в генеральной совокупности. $P(H_0) + P(H_1) = 1$
 
 Какие $H_0$ и $H_1$ для гипотез? 
@@ -281,7 +282,7 @@ knitr::include_graphics("docs/images/errors.jpg")
 ```
 </p>
 
-**Уровень значимости** $\alpha$, она же ошибка первого рода -- сделать ложноположительный вывод, то есть когда эффекта нет в генеральной совокупности, но мы делаем вывод, что он есть --  мы задаем сами (!). В психологии есть конвенциональная договоренность считать уровень значимости $\alpha = 0.05$. То есть, мы просто договорились считать 5% вероятность сделать ложноположительный вывод -- компромиссным вариантом между тем, чтобы мочь делать вообще какие-то выводы о генеральной совокупности, и тем, что 5%  наших исследований будут содержать неверные выводы (на самом деле, гораздо больше, об этом поговорим позже).
+**Уровень значимости** $\alpha$, она же ошибка первого рода -- сделать ложноположительный вывод, то есть когда эффекта нет в генеральной совокупности, но мы делаем вывод, что он есть --  мы задаем сами (!). В психологии есть конвенциональная договоренность считать уровень значимости $\alpha = 0.05$. То есть, мы просто договорились считать 5% вероятность сделать ложноположительный вывод -- компромиссным вариантом между тем, чтобы мочь делать вообще какие-то выводы о генеральной совокупности, и тем, что 5% наших исследований будут содержать неверные выводы (на самом деле, гораздо больше, об этом поговорим позже).
 
 Но это договоренность, притом спорная!
 В физике элементарных частиц  $\alpha = 0.000003$!
@@ -296,23 +297,8 @@ knitr::include_graphics("docs/images/errors.jpg")
 
 ## Выбор статистического критерия
 
-Как понять, какой тест выбрать? Это, наверное, один из самых сложных вопросов в статистике.
+Как понять, какой тест выбрать? Это, наверное, один из самых сложных вопросов в статистике. На него влияет большое количество нюансов, мы рассмотрим их в [следующем разделе](#stats_criteria)
 
-**Вопросы, которые влияют на принятие решения относительно статистического теста:**
-
-1. Зависимая переменная количественная (интервальная шкала или шкала отношений) или категориальная (номинативная или порядковая шкала)?
-2. Если ЗП количественная -- она описывается параметрическим (чаще всего нормальным) распределением? *(определяется чаще "на глаз" по графику плотности вероятности или QQ-графиками, тесты на нормальность почти всегда будут давать негативный результат из-за чувствительности и поэтому в современном анализе данных используются мало)*
-3. Сколько независимых переменных?
-4. НП количественные (интервальная и шкала отношений) или категориальные (номинативная и порядковая)?
-5. Если НП категориальные и мы сравниваем группы -- данные в группах зависимы или нет? Если нет, как сильно отличаются данные в группах, можем ли сказать, что дисперсия ЗП примерно одинакова в группах или нет? (*равенство дисперсий называется Homogeneity of Variance, проверяется с помощью Levene's test*)
-
-Есть большое количество схем, но обычно они сильно перегруженны и сложны в использовании, больше путают, чем помогают. 
-
-<p align="center"> 
-```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
-knitr::include_graphics("docs/images/tests.png")
-```
-</p>
 
 ## Размер выборки
 
@@ -326,10 +312,10 @@ knitr::include_graphics("docs/images/tests.png")
 
 Есть хорошая визуализация размера эффекта дла t-test *Cohen's d*  https://rpsychologist.com/d3/cohend/
 
-Размер эффекта обычно используется в двух случаях:
+Размер эффекта обычно участвует в тестировании гипотез на двух стадиях:
 
-1. Для расчета размера выборки при планировании исследования *(текущий момент)* --  в этом с лучае используется размер эффекта из аналогичных уже проведенных исследований для того, чтобы примерно оценить возможности поймать популяционный эффект на нашей выборке и набрать нужное количество.
-2. При репортинге результатов уже проведенного собственного статистического теста. Здесь он указывается вместе со статистиками, об этом в разделе [Статистики вывода: расчет разных статистических методов для проверки гипотез]
+1. Для расчета размера выборки на этапе планировании исследования --  в этом случае используется размер эффекта из аналогичных уже проведенных исследований для того, чтобы примерно оценить возможности поймать популяционный эффект на нашей выборке и набрать нужное количество.
+2. Во время интерпретации проведенного статистического теста на данных. Размер эффекта -- одна из ключевых цифр для понимания результатов статистических тестов.
 
 Если в статьях, на которые вы опираетесь при планировании исследования, не указан размер эффекта, его можно посчитать самостоятельно.
 
@@ -381,24 +367,26 @@ knitr::include_graphics("docs/images/pvalue_dist_2.png")
 
 Для того, чтобы детально поразбираться в нюансах размера эффекта и выборки, можно пройти курс Лакенса https://www.coursera.org/learn/statistical-inferences (кажется, теперь только с vpn)
 
-<div>
-<details>
-<summary>*Мем про статистически вывод*</summary>
-<p align="center"> 
-```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
-knitr::include_graphics("docs/images/meme_effsize.png")
-```
-Мем из Когнитивного патимейкера
-</p>
-
-</details>
-</div>
-
 ## Расчет статического критерия и проверка значимости
 
-$\mu$ = 18, M = 15, n = 100, sd = 4.5
+Вернемся снова к нашим вопросам.
 
-Построим распределение выборочных средних. Мы предположили, что популяционное среднее равно 18, а чему равно стандартное отклонение этого распределения?
+> Допустим, мы исследовали семьи с подростками в крупных (GP school) и небольших городах (MS school) и на нашей выборке посчитали, что в крупных городах родители проводят со своими детьми в среднем 14 часов, а в небольших городах -- 15 часов в неделю (из данных задания на доверительный интвервал). 
+1. Отличается ли статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах? 2. Отличается ли статистически значимо частота употребления алкоголя в семьях с менее поддерживающими отношениями и более поддерживающими? 
+3. Отличается ли статистически значимо средний балл по математике у тех, кто чаще или реже пропускает занятия?
+
+На примере первого вопроса разберем процесс проверки нулевой гипотезы, то, как работает *любой* статистический критерий.
+
+$\mu$ = 14, M = 15, n = 100, sd = 4.5
+
+Сформулириуем нулевую и альтернативные гипотезы. Нулевая гипотеза -- всегда гипотеза об отсутствии различий, то есть, что среднее время, которое проводят родители с детьми в неделю, не отличается в больших и маленьких городах.
+$H_0$: $M_{большие} = M_{маленькие}$ 
+$H_1$: $M_{большие} \neq M_{маленькие}$ 
+
+Далее мы начинаем проверять наше нулевое предположение, будем пытаться опровергнуть нулевую гипотезу.
+
+Итак, предполагаем, что нулевая гипотеза верна. 
+Далее, если мы исходим из того, что она верна, то $M_{большие}$ и $M_{маленькие}$ будут в одной точке. Так как речь идет про два средних разных выборок, то нам нужно распределение выборочных средних, на котором мы и сможем разместить $M_{большие}$ и $M_{маленькие}$.  
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
@@ -406,21 +394,40 @@ knitr::include_graphics("docs/images/means_dist.png")
 ```
 </p>
 
-Сначала считаем стандартную ошибку среднего $\mathrm{se} = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
 
-Как понять, насколько далеко наше выборочное среднее отклонилось от популяционного в 18? 
+Далее, нам нужно как-то оценить, насколько $M_{маленькие}$ удалено от $M_{большие}$. Что мы делаем всегда, когда нам нужно сравнить, какое из значений, взятых из разных выборок, больше или меньше другого? Переходим к стандартному нормальному распределению -- распределению Z-оценок! 
+$Z = \frac{x - \bar x}{s}$
 
-Надо посчитать z-оценку!
+Причем стандартным отклонением этого распределения будет [стандартная ошибка среднего](standart_error) -- величина стандартного отклонения для распределения выборочных средних.
+
+Возьмем за середину распределения $M_{большие}$ (произвольно, можем взять любое из средних). Чтобы перевести $M_{маленькие}$ в Z-оценку, сначала посчитаем стандартную ошибку среднего $\mathrm{se} = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$.
+$se = \frac{4.5}{\sqrt{10}} = 0.45$ *(мы уже считали ее для расчета доверительного интервала -- математика этих процессов почти идентична!)*
+
+$Z_{Mмаленькие} = \frac{M_{маленькие} - M_{большие}}{se}$.
+
+$Z_{Mмаленькие} = \frac{15-14}{0.45} = 2.2$
+
+Теперь мы можем расположить $M_{маленькие}$ на Z-распределении с серединой в $M_{большие}$ и посмотреть, насколько сильно они получилиьсь далеко друг от друга.
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
 knitr::include_graphics("docs/images/z_dist.png")
 ```
 
-https://gallery.shinyapps.io/dist_calc/ 
+Мы знаем, что числу 2 на распределении Z-оценок соответствует примерно 96% данных (мы знаем распределение данных для любого нормального распределения). И вспомним, что мы строили это распределение исходя из предположения равенства нулевой гипотезы, что $M_{большие} = M_{маленькие}$. Как тогда мы можем проинтерпретировать полученные оценки?
 
-Статья "A Dirty Dozen: Twelve P-Value Misconceptions" https://sixsigmadsi.com/wp-content/uploads/2020/10/A-Dirty-Dozen-Twelve-P-Value-Misconceptions.pdf
+Получилось, что вероятность получить значение $M_{маленькие} = 15 $ или еще более далекое от от $M_{большие}= 14$  при верности предположения что $M_{большие} = M_{маленькие}$ составляет $P(M_{маленькие} | M_{большие} = M_{маленькие}) = 1 - 0.96 = 0.04$. **Это и есть наше p-value**, целевая статистика, которую мы стремимся получить.
 
-<!-- $z = \frac{x - \bar x}{s}$ -->
+В интерпретации p-value много путаницы, чтобы распутаться, можно почитать эти статьи:
+
+* Статья "A Dirty Dozen: Twelve P-Value Misconceptions" https://sixsigmadsi.com/wp-content/uploads/2020/10/A-Dirty-Dozen-Twelve-P-Value-Misconceptions.pdf
+
+* Неправильное использование p- значений -Misuse of p-values Неправильное использование <i>p-</i> значений - https://ru.abcdef.wiki/wiki/Misuse_of_p-values https://ru.abcdef.wiki/wiki/Misuse_of_p-values 
+
+Далее, после того, как мы получили p-value, мы сравниваем это значение с нашим выбранным уровнем $\alpha$ -- допустимой нами вероятностью сделать ложноположительный вывод, допустить ошибку первого рода.
+
+$p-value = 0.04 < \alpha = 0.05$.
+
+В этом случае, если p-value получилось меньше альфы, то мы можем сказать, что **вероятность получить такие или еще более сильные различия между средними достаточно при условии верности нулевой гипотезы статистически значимо мала, поэтому мы можем отвергнуть нулевую гипотезу об отсутствии различий и принять альтернативную гипотезу о том, что различия есть**
 
 
